--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <meta name="twitter:description" content="Vue.js - Intuitive, Fast and Composable MVVM for building interactive interfaces.">
         <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
 
-        <link rel="icon" href="/images/logo.png" type="image/x-icon">
+        <link rel="icon" href="./images/logo.png" type="image/x-icon">
 
         <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Roboto Mono' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Dosis:500&text=Vue.js' rel='stylesheet' type='text/css'>
@@ -26,16 +26,16 @@
         <link rel="stylesheet" href="/css/index.css">
 
         <!-- this needs to be loaded before guide's inline scripts -->
-        <script src="/js/vue.js"></script>
+        <script src="./js/vue.js"></script>
         <script>window.PAGE_TYPE = ""</script>
     </head>
     <body class="">        <div id="mobile-bar" class="top">
             <a class="menu-button"></a>
-            <a class="logo" href="/"></a>
+            <a class="logo" href="./"></a>
         </div>
         <div id="header">
-  <a id="logo" href="/">
-    <img src="/images/logo.png">
+  <a id="logo" href="./">
+    <img src="./images/logo.png">
     <span>Vue.js</span>
   </a>
   <ul id="nav">
@@ -44,9 +44,9 @@
     <input type="text" id="search-query-nav" class="search-query st-default-search-input">
   </form>
 </li>
-<li><a href="/v2/guide/" class="nav-link">Guide</a></li>
-<li><a href="/v2/api/" class="nav-link">API</a></li>
-<li><a href="/v2/examples/" class="nav-link">Examples</a></li>
+<li><a href="./v2/guide/" class="nav-link">Guide</a></li>
+<li><a href="./v2/api/" class="nav-link">API</a></li>
+<li><a href="./v2/examples/" class="nav-link">Examples</a></li>
 <li class="nav-dropdown-container ecosystem">
   <a class="nav-link">Ecosystem</a><span class="arrow"></span>
   <ul class="nav-dropdown">
@@ -99,9 +99,9 @@
     <input type="text" id="search-query-sidebar" class="search-query st-default-search-input">
   </form>
 </li>
-<li><a href="/v2/guide/" class="nav-link">Guide</a></li>
-<li><a href="/v2/api/" class="nav-link">API</a></li>
-<li><a href="/v2/examples/" class="nav-link">Examples</a></li>
+<li><a href="./v2/guide/" class="nav-link">Guide</a></li>
+<li><a href="./v2/api/" class="nav-link">API</a></li>
+<li><a href="./v2/examples/" class="nav-link">Examples</a></li>
 <li class="nav-dropdown-container ecosystem">
   <a class="nav-link">Ecosystem</a><span class="arrow"></span>
   <ul class="nav-dropdown">
@@ -148,15 +148,16 @@
 
 <div id="hero">
   <div class="inner">
+  	<p class="tip"><strong>Cette page est en cours de traduction française. Revenez une autre fois pour lire une traduction achevée ou <a href="https://github.com/vuejs-fr/vuejs.org" target="_blank" rel="external">participez à la traduction française ici</a>.</strong></p>
     <div class="left">
-      <img class="hero-logo" src="/images/logo.png">
+      <img class="hero-logo" src="./images/logo.png">
     </div><div class="right">
       <h2 class="vue">Vue.js</h2>
       <h1>
         The Progressive<br>JavaScript Framework
       </h1>
       <p>
-        <a class="button" href="/v2/guide/">GET STARTED</a>
+        <a class="button" href="./v2/guide/">GET STARTED</a>
         <a class="button white" href="https://github.com/vuejs/vue" target="_blank">GITHUB</a>
       </p>
     </div>
@@ -190,44 +191,44 @@
   <div class="inner">
     <h3>PROUDLY SPONSORED BY</h3>
     <a class="vip" href="http://www.thedifferenceengine.io/" target="_blank">
-  <img src="/images/tde.png">
+  <img src="./images/tde.png">
 </a>
 <a href="https://jsfiddle.net/" target="_blank">
-  <img src="/images/jsfiddle.png">
+  <img src="./images/jsfiddle.png">
 </a>
 <a href="https://laravel.com/" target="_blank">
-  <img src="/images/laravel.png">
+  <img src="./images/laravel.png">
 </a>
 <a href="https://chaitin.cn" target="_blank" style="top:-1px">
-  <img src="/images/chaitin.png">
+  <img src="./images/chaitin.png">
 </a>
 <a href="https://htmlburger.com" target="_blank">
-  <img src="/images/htmlburger.png">
+  <img src="./images/htmlburger.png">
 </a>
 <a href="https://starter.someline.com/" target="_blank" style="top:-2px">
-  <img src="/images/someline.png">
+  <img src="./images/someline.png">
 </a>
 <a href="http://gold.xitu.io/?utm_source=vuejs&utm_medium=image&utm_content=juejin&utm_campaign=q3_website" target="_blank" style="width:75px">
-  <img src="/images/juejin.png" style="width:75px">
+  <img src="./images/juejin.png" style="width:75px">
 </a>
 <a href="http://monterail.com/" target="_blank">
-  <img src="/images/monterail.png">
+  <img src="./images/monterail.png">
 </a>
 <a href="https://www.trisoft.ro/" target="_blank" style="width:80px;top:-2px">
-  <img src="/images/trisoft.png" style="width:80px">
+  <img src="./images/trisoft.png" style="width:80px">
 </a>
 <a href="http://actualize.co/" target="_blank" style="width:144px;">
-  <img src="/images/actualize.png" style="width:144px">
+  <img src="./images/actualize.png" style="width:144px">
 </a>
 <a href="https://www.2mhost.com/" target="_blank" style="width:90px">
-  <img src="/images/2mhost.png" style="width:90px">
+  <img src="./images/2mhost.png" style="width:90px">
 </a>
 <a href="https://vuejobs.com/?ref=vuejs" target="_blank" style="width:90px;top:5px">
-  <img src="/images/vuejobs.png" style="width:90px">
+  <img src="./images/vuejobs.png" style="width:90px">
 </a>
 
     <br>
-    <a class="become-sponsor button white" href="/support-vuejs/">Become a Backer</a>
+    <a class="become-sponsor button white" href="./support-vuejs/">Become a Backer</a>
   </div>
 </div>
 
@@ -252,7 +253,7 @@ window.addEventListener('scroll', function () {
         
 
         <!-- main custom script for sidebars, version selects etc. -->
-        <script src="/js/common.js"></script>
+        <script src="./js/common.js"></script>
 
         <!-- ga -->
         <script>
