Temp website at https://vuejs-fr.github.io/vuejs.org/
Signed-off-by: Bruno Lesieur <bruno.lesieur@gmail.com>

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link href='//fonts.googleapis.com/css?family=Dosis:500&text=Vue.js' rel='stylesheet' type='text/css'>
 
         <!-- main page styles -->
-        <link rel="stylesheet" href="/css/index.css">
+        <link rel="stylesheet" href="./css/index.css">
 
         <!-- this needs to be loaded before guide's inline scripts -->
         <script src="./js/vue.js"></script>
@@ -148,7 +148,6 @@
 
 <div id="hero">
   <div class="inner">
-  	<p class="tip"><strong>Cette page est en cours de traduction française. Revenez une autre fois pour lire une traduction achevée ou <a href="https://github.com/vuejs-fr/vuejs.org" target="_blank" rel="external">participez à la traduction française ici</a>.</strong></p>
     <div class="left">
       <img class="hero-logo" src="./images/logo.png">
     </div><div class="right">
