--- a/perf/index.html
+++ b/perf/index.html
@@ -17,25 +17,25 @@
         <meta name="twitter:description" content="Vue.js - Intuitive, Fast and Composable MVVM for building interactive interfaces.">
         <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
 
-        <link rel="icon" href="/images/logo.png" type="image/x-icon">
+        <link rel="icon" href="./images/logo.png" type="image/x-icon">
 
         <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600|Roboto Mono' rel='stylesheet' type='text/css'>
         <link href='//fonts.googleapis.com/css?family=Dosis:500&text=Vue.js' rel='stylesheet' type='text/css'>
 
         <!-- main page styles -->
-        <link rel="stylesheet" href="/css/page.css">
+        <link rel="stylesheet" href="./css/page.css">
 
         <!-- this needs to be loaded before guide's inline scripts -->
-        <script src="/js/vue.js"></script>
+        <script src="./js/vue.js"></script>
         <script>window.PAGE_TYPE = ""</script>
     </head>
     <body class="docs">        <div id="mobile-bar" >
             <a class="menu-button"></a>
-            <a class="logo" href="/"></a>
+            <a class="logo" href="./"></a>
         </div>
         <div id="header">
-  <a id="logo" href="/">
-    <img src="/images/logo.png">
+  <a id="logo" href="./">
+    <img src="./images/logo.png">
     <span>Vue.js</span>
   </a>
   <ul id="nav">
@@ -44,9 +44,9 @@
     <input type="text" id="search-query-nav" class="search-query st-default-search-input">
   </form>
 </li>
-<li><a href="/v2/guide/" class="nav-link">Guide</a></li>
-<li><a href="/v2/api/" class="nav-link">API</a></li>
-<li><a href="/v2/examples/" class="nav-link">Exemples</a></li>
+<li><a href="./v2/guide/" class="nav-link">Guide</a></li>
+<li><a href="./v2/api/" class="nav-link">API</a></li>
+<li><a href="./v2/examples/" class="nav-link">Examples</a></li>
 <li class="nav-dropdown-container ecosystem">
   <a class="nav-link">Écosystème</a><span class="arrow"></span>
   <ul class="nav-dropdown">
@@ -78,9 +78,8 @@
 
 
 <li class="nav-dropdown-container language">
-  <a class="nav-link">Traductions</a><span class="arrow"></span>
+  <a class="nav-link">Translations</a><span class="arrow"></span>
   <ul class="nav-dropdown">
-    <li><a href="https://vuejs.org/" class="nav-link" target="_blank">English</a></li>
     <li><a href="https://cn.vuejs.org/" class="nav-link" target="_blank">中文</a></li>
     <li><a href="https://jp.vuejs.org/" class="nav-link" target="_blank">日本語</a></li>
     <li><a href="https://ru.vuejs.org/" class="nav-link" target="_blank">Русский</a></li>
@@ -103,9 +102,9 @@
     <input type="text" id="search-query-sidebar" class="search-query st-default-search-input">
   </form>
 </li>
-<li><a href="/v2/guide/" class="nav-link">Guide</a></li>
-<li><a href="/v2/api/" class="nav-link">API</a></li>
-<li><a href="/v2/examples/" class="nav-link">Exemples</a></li>
+<li><a href="./v2/guide/" class="nav-link">Guide</a></li>
+<li><a href="./v2/api/" class="nav-link">API</a></li>
+<li><a href="./v2/examples/" class="nav-link">Examples</a></li>
 <li class="nav-dropdown-container ecosystem">
   <a class="nav-link">Écosystème</a><span class="arrow"></span>
   <ul class="nav-dropdown">
@@ -137,9 +136,8 @@
 
 
 <li class="nav-dropdown-container language">
-  <a class="nav-link">Traductions</a><span class="arrow"></span>
+  <a class="nav-link">Translations</a><span class="arrow"></span>
   <ul class="nav-dropdown">
-    <li><a href="https://vuejs.org/" class="nav-link" target="_blank">English</a></li>
     <li><a href="https://cn.vuejs.org/" class="nav-link" target="_blank">中文</a></li>
     <li><a href="https://jp.vuejs.org/" class="nav-link" target="_blank">日本語</a></li>
     <li><a href="https://ru.vuejs.org/" class="nav-link" target="_blank">Русский</a></li>
@@ -180,11 +178,11 @@
 
                 
             </div>
-            <script src="/js/smooth-scroll.min.js"></script>
+            <script src="./js/smooth-scroll.min.js"></script>
         
 
         <!-- main custom script for sidebars, version selects etc. -->
-        <script src="/js/common.js"></script>
+        <script src="./js/common.js"></script>
 
         <!-- ga -->
         <script>
