--- a/v2/guide/migration-vuex.html
+++ b/v2/guide/migration-vuex.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <base href="https://vuejs-fr.github.io/vuejs.org/">
         <title>Migration from Vuex 0.6.x to 1.0 - vue.js</title>
         <meta charset="utf-8">
         <meta name="description" content="Vue.js - Intuitive, Fast and Composable MVVM for building interactive interfaces.">
@@ -46,7 +47,7 @@
 </li>
 <li><a href="./v2/guide/" class="nav-link current">Guide</a></li>
 <li><a href="./v2/api/" class="nav-link">API</a></li>
-<li><a href="./v2/examples/" class="nav-link">Examples</a></li>
+<li><a href="./v2/examples/" class="nav-link">Exemples</a></li>
 <li class="nav-dropdown-container ecosystem">
   <a class="nav-link">Écosystème</a><span class="arrow"></span>
   <ul class="nav-dropdown">
@@ -78,7 +79,7 @@
 
 
 <li class="nav-dropdown-container language">
-  <a class="nav-link">Translations</a><span class="arrow"></span>
+  <a class="nav-link">Traductions</a><span class="arrow"></span>
   <ul class="nav-dropdown">
     <li><a href="https://cn.vuejs.org/" class="nav-link" target="_blank">中文</a></li>
     <li><a href="https://jp.vuejs.org/" class="nav-link" target="_blank">日本語</a></li>
@@ -104,7 +105,7 @@
 </li>
 <li><a href="./v2/guide/" class="nav-link current">Guide</a></li>
 <li><a href="./v2/api/" class="nav-link">API</a></li>
-<li><a href="./v2/examples/" class="nav-link">Examples</a></li>
+<li><a href="./v2/examples/" class="nav-link">Exemples</a></li>
 <li class="nav-dropdown-container ecosystem">
   <a class="nav-link">Écosystème</a><span class="arrow"></span>
   <ul class="nav-dropdown">
@@ -136,7 +137,7 @@
 
 
 <li class="nav-dropdown-container language">
-  <a class="nav-link">Translations</a><span class="arrow"></span>
+  <a class="nav-link">Traductions</a><span class="arrow"></span>
   <ul class="nav-dropdown">
     <li><a href="https://cn.vuejs.org/" class="nav-link" target="_blank">中文</a></li>
     <li><a href="https://jp.vuejs.org/" class="nav-link" target="_blank">日本語</a></li>
