Translation of « 17kb min+gzip Runtime » in « Minimun fonctionnel 17ko min+gzip ».
Signed-off-by: Bruno Lesieur <bruno.lesieur@gmail.com>

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <div class="point">
       <h2>Performant</h2>
       <p>
-        17kb min+gzip Runtime<br>
+        Minimum fonctionnel de 17ko min+gzip<br>
         Ultra-rapide avec son DOM Virtuel<br>
         Effort d'optimisation minimal
       </p>
