--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
         <base href="https://vuejs-fr.github.io/vuejs.org/">
         <title>vue.js</title>
         <meta charset="utf-8">
-        <meta name="description" content="Vue.js - Intuitive, Fast and Composable MVVM for building interactive interfaces.">
+        <meta name="description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
         <meta property="og:type" content="article">
         <meta property="og:title" content="vue.js">
-        <meta property="og:description" content="Vue.js - Intuitive, Fast and Composable MVVM for building interactive interfaces.">
+        <meta property="og:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
         <meta property="og:image" content="https://vuejs.org/images/logo.png">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="vue.js">
-        <meta name="twitter:description" content="Vue.js - Intuitive, Fast and Composable MVVM for building interactive interfaces.">
+        <meta name="twitter:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
         <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
 
         <link rel="icon" href="./images/logo.png" type="image/x-icon">
@@ -179,7 +179,7 @@
     <div class="point">
       <h2>Performant</h2>
       <p>
-        Minimum fonctionnel de 17ko min+gzip<br>
+        Minimum utile de 17ko min+gzip<br>
         Ultra-rapide avec son DOM Virtuel<br>
         Effort d'optimisation minimal
       </p>
@@ -262,7 +262,7 @@ window.addEventListener('scroll', function () {
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-46852172-1', 'vuejs.org');
+          ga('create', 'UA-46852172-1', 'fr.vuejs.org');
           ga('send', 'pageview');
         </script>
 
