Translation of side and bottom phrase.
Signed-off-by: Bruno Lesieur <bruno.lesieur@gmail.com>

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
         <meta property="og:type" content="article">
         <meta property="og:title" content="vue.js">
         <meta property="og:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
-        <meta property="og:image" content="https://vuejs.org/images/logo.png">
+        <meta property="og:image" content="https://fr.vuejs.org/images/logo.png">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="vue.js">
         <meta name="twitter:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
-        <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
+        <meta name="twitter:image" content="https://fr.vuejs.org/images/logo.png">
 
         <link rel="icon" href="./images/logo.png" type="image/x-icon">
 
