--- a/support-vuejs/index.html
+++ b/support-vuejs/index.html
@@ -11,12 +11,12 @@
         <meta property="og:type" content="article">
         <meta property="og:title" content="vue.js">
         <meta property="og:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
-        <meta property="og:image" content="https://vuejs.org/images/logo.png">
+        <meta property="og:image" content="https://fr.vuejs.org/images/logo.png">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="vue.js">
         <meta name="twitter:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
-        <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
+        <meta name="twitter:image" content="https://fr.vuejs.org/images/logo.png">
 
         <link rel="icon" href="./images/logo.png" type="image/x-icon">
 
@@ -166,9 +166,9 @@
 
     
     <div class="footer">
-      Caught a mistake or want to contribute to the documentation?
-      <a href="https://github.com/vuejs/vuejs.org/blob/master/src/support-vuejs/index.md" target="_blank">
-        Edit this page on Github!
+      Une erreur dans cette page ? Envie de contribuer à la traduction ?
+      <a href="https://github.com/vuejs-fr/vuejs.org/blob/master/src/support-vuejs/index.md" target="_blank">
+        Éditez cette page sur Github !
       </a>
     </div>
 </div>
@@ -188,7 +188,7 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-46852172-1', 'vuejs.org');
+          ga('create', 'UA-46852172-1', 'fr.vuejs.org');
           ga('send', 'pageview');
         </script>
 
