Update website with new consistent line with upstream into article.
Signed-off-by: Bruno Lesieur <bruno.lesieur@gmail.com>

--- a/v2/examples/hackernews.html
+++ b/v2/examples/hackernews.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <base href="https://vuejs-fr.github.io/vuejs.org/">
+        <base href="http://localhost:4000/">
         <title>HackerNews Clone - vue.js</title>
         <meta charset="utf-8">
         <meta name="description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
@@ -11,12 +11,12 @@
         <meta property="og:type" content="article">
         <meta property="og:title" content="HackerNews Clone - vue.js">
         <meta property="og:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
-        <meta property="og:image" content="https:///images/logo.png">
+        <meta property="og:image" content="https://vuejs.org/images/logo.png">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="HackerNews Clone - vue.js">
         <meta name="twitter:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
-        <meta name="twitter:image" content="https:///images/logo.png">
+        <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
 
         <link rel="icon" href="./images/logo.png" type="image/x-icon">
 
@@ -275,13 +275,13 @@
 <blockquote>
 <p>This is a HackerNews clone built upon HN’s official Firebase API, Vue 2.0 + vue-router + vuex, with server-side rendering.</p>
 </blockquote>
-
+<p></p><p class="tip"><strong>Cette page est en cours de traduction française. Revenez une autre fois pour lire une traduction achevée ou <a href="https://github.com/vuejs-fr/vuejs.org" target="_blank" rel="external">participez à la traduction française ici</a>.</strong></p>
 <div style="max-width:600px">
   <a href="https://github.com/vuejs/vue-hackernews-2.0" target="_blank">
     <img style="width:100%" src="/images/hn.png">
   </a>
 </div>
-
+<p></p>
 <blockquote>
 <p><a href="https://vue-hn.now.sh/" target="_blank" rel="external">Live Demo</a><br>Note: the demo may need some spin up time if nobody has accessed it for a certain period.</p>
 <p>[<a href="https://github.com/vuejs/vue-hackernews-2.0" target="_blank" rel="external">Source</a>]</p>
@@ -326,7 +326,7 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-46852172-1', '');
+          ga('create', 'UA-46852172-1', 'vuejs.org');
           ga('send', 'pageview');
         </script>
 
