--- a/v2/guide/migration-vuex.html
+++ b/v2/guide/migration-vuex.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <base href="https://vuejs-fr.github.io/vuejs.org/">
+        <base href="http://localhost:4000/">
         <title>Migration from Vuex 0.6.x to 1.0 - vue.js</title>
         <meta charset="utf-8">
         <meta name="description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
@@ -11,12 +11,12 @@
         <meta property="og:type" content="article">
         <meta property="og:title" content="Migration from Vuex 0.6.x to 1.0 - vue.js">
         <meta property="og:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
-        <meta property="og:image" content="https:///images/logo.png">
+        <meta property="og:image" content="https://vuejs.org/images/logo.png">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Migration from Vuex 0.6.x to 1.0 - vue.js">
         <meta name="twitter:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
-        <meta name="twitter:image" content="https:///images/logo.png">
+        <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
 
         <link rel="icon" href="./images/logo.png" type="image/x-icon">
 
@@ -566,7 +566,7 @@
 <blockquote>
 <p>Vuex 2.0 is released, but this guide only covers the migration to 1.0? Is that a typo? Also, it looks like Vuex 1.0 and 2.0 were released simultaneously. What’s going on? Which one should I use and what’s compatible with Vue 2.0?</p>
 </blockquote>
-<p>Both Vuex 1.0 and 2.0:</p>
+<p></p><p class="tip"><strong>Cette page est en cours de traduction française. Revenez une autre fois pour lire une traduction achevée ou <a href="https://github.com/vuejs-fr/vuejs.org" target="_blank" rel="external">participez à la traduction française ici</a>.</strong></p>Both Vuex 1.0 and 2.0:<p></p>
 <ul>
 <li>fully support both Vue 1.0 and 2.0</li>
 <li>will be maintained for the forseeable future</li>
@@ -638,7 +638,7 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-          ga('create', 'UA-46852172-1', '');
+          ga('create', 'UA-46852172-1', 'vuejs.org');
           ga('send', 'pageview');
         </script>
 
