--- a/v2/examples/todomvc.html
+++ b/v2/examples/todomvc.html
@@ -160,7 +160,7 @@
             Apporter son soutien
         </a>
         <h2>
-            Examples
+            Exemples
             
                 <select class="version-select">
                     <option value="SELF" selected>2.0</option>
