--- a/v2/examples/index.html
+++ b/v2/examples/index.html
@@ -10,7 +10,7 @@
         <meta property="og:type" content="article">
         <meta property="og:title" content="Éditeur Markdown — Vue.js">
         <meta property="og:description" content="Vue.js - Créer rapidement et intuitivement des interfaces intéractives MVVM organisées.">
-        <meta property="og:image" content="https://vuejs.org/images/logo.png">
+        <meta property="og:image" content="https://vuejs.org//images/logo.png">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:title" content="Éditeur Markdown — Vue.js">
