--- a/index.html
+++ b/index.html
@@ -98,6 +98,10 @@
   </ul>
 </li>
 
+<li>
+  <a href="https://vue.threadless.com" target="_blank" class="nav-link shop">Shop</a>
+  <span class="new-label">NEW!</span>
+</li>
 
   </ul>
 </div>
@@ -153,6 +157,10 @@
   </ul>
 </li>
 
+<li>
+  <a href="https://vue.threadless.com" target="_blank" class="nav-link shop">Shop</a>
+  <span class="new-label">NEW!</span>
+</li>
 
   </ul>
 </div>
@@ -200,9 +208,10 @@
 <div id="sponsors">
   <div class="inner">
     <h3>FIÈREMENT SPONSORISÉ PAR</h3>
-    <a class="vip" href="http://www.thedifferenceengine.io/" target="_blank">
-  <img src="/images/tde.png">
+    <a href="https://stdlib.com/" target="_blank" style="width: 180px">
+  <img style="width: 180px" src="/images/stdlib.png">
 </a>
+<br>
 <a href="https://jsfiddle.net/" target="_blank">
   <img src="/images/jsfiddle.png">
 </a>
@@ -224,20 +233,14 @@
 <a href="https://www.trisoft.ro/" target="_blank" style="width:80px;top:-2px">
   <img src="/images/trisoft.png" style="width:80px">
 </a>
-<a href="http://actualize.co/" target="_blank" style="width:144px;">
-  <img src="/images/actualize.png" style="width:144px">
-</a>
 <a href="https://www.2mhost.com/" target="_blank" style="width:90px">
   <img src="/images/2mhost.png" style="width:90px">
 </a>
 <a href="https://vuejobs.com/?ref=vuejs" target="_blank" style="width:90px;top:5px">
-  <img src="/images/vuejobs.png" style="width:90px">
+  <img src="/images/vuejobs.svg" style="width:90px">
 </a>
 <a href="https://leanpub.com/vuejs2" target="_blank">
   <img src="/images/tmvuejs2.png">
-</a>
-<a href="https://stdlib.com/" target="_blank" style="width:80px">
-  <img src="/images/stdlib.png">
 </a>
 
     <br>
