--- a/v2/guide/single-file-components.html
+++ b/v2/guide/single-file-components.html
@@ -98,6 +98,10 @@
   </ul>
 </li>
 
+<li>
+  <a href="https://vue.threadless.com" target="_blank" class="nav-link shop">Shop</a>
+  <span class="new-label">NEW!</span>
+</li>
 
   </ul>
 </div>
@@ -156,14 +160,17 @@
   </ul>
 </li>
 
+<li>
+  <a href="https://vue.threadless.com" target="_blank" class="nav-link shop">Shop</a>
+  <span class="new-label">NEW!</span>
+</li>
 
     </ul>
     <div class="list">
         <div class="main-sponsor">
-            <span>Sponsorisé par</span><br>
-            <a href="http://www.thedifferenceengine.io/" target="_blank"
-                style="background-color: #f3f3f3; padding: 10px 0">
-                <img src="/images/tde.png">
+            <span>Sponsor de platine</span><br>
+            <a href="https://stdlib.com" target="_blank" class="logo">
+                <img src="/images/stdlib.png">
             </a>
         </div>
         <a class="become-backer" href="/support-vuejs">
@@ -584,7 +591,7 @@
 <p><img src="/images/vue-component.png" style="display: block; margin: 30px auto"></p>
 <p>Maintenant nous avons :</p>
 <ul>
-<li><a href="https://github.com/vuejs/awesome-vue#syntax-highlighting" target="_blank" rel="external">Une coloration syntaxique complète</a></li>
+<li><a href="https://github.com/vuejs/awesome-vue#source-code-editing" target="_blank" rel="external">Une coloration syntaxique complète</a></li>
 <li><a href="https://webpack.js.org/concepts/modules/#what-is-a-webpack-module" target="_blank" rel="external">Des modules CommonJS</a></li>
 <li><a href="https://github.com/vuejs/vue-loader/blob/master/docs/en/features/scoped-css.md" target="_blank" rel="external">Du CSS à la portée limitée au composant</a></li>
 </ul>
