--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <li><a href="https://jp.vuejs.org/" class="nav-link" target="_blank">日本語</a></li>
     <li><a href="https://kr.vuejs.org/" class="nav-link" target="_blank">한국어</a></li>
     <li><a href="https://vuejs.org/" class="nav-link" target="_blank">English</a></li>
+    <li><a href="https://fr.vuejs.org/" class="nav-link" target="_blank">Français</a></li>
     <li><a href="https://br.vuejs.org/" class="nav-link" target="_blank">Português</a></li>
     <li><a href="https://ru.vuejs.org/" class="nav-link" target="_blank">Русский</a></li>
   </ul>
@@ -155,6 +156,7 @@
     <li><a href="https://jp.vuejs.org/" class="nav-link" target="_blank">日本語</a></li>
     <li><a href="https://kr.vuejs.org/" class="nav-link" target="_blank">한국어</a></li>
     <li><a href="https://vuejs.org/" class="nav-link" target="_blank">English</a></li>
+    <li><a href="https://fr.vuejs.org/" class="nav-link" target="_blank">Français</a></li>
     <li><a href="https://br.vuejs.org/" class="nav-link" target="_blank">Português</a></li>
     <li><a href="https://ru.vuejs.org/" class="nav-link" target="_blank">Русский</a></li>
   </ul>
@@ -250,9 +252,6 @@
 <a href="https://famebroker.com" target="_blank" style="width:115px">
   <img src="/images/famebroker.png" style="width:115px">
 </a>
-<a href="https://fancygrid.com" target="_blank" style="width:110px;">
-  <img src="/images/fancygrid.png" style="width:110px">
-</a>
 <a href="https://component.io" target="_blank" style="width:120px;top:1px">
   <img src="/images/component_io.png" style="width:120px">
 </a>
@@ -285,7 +284,7 @@ window.addEventListener('scroll', function () {
 
         
 
-        <!-- main custom script for sidebars, version selects etc. -->        
+        <!-- main custom script for sidebars, version selects etc. -->
         <script src="/js/css.escape.js"></script>
         <script src="/js/common.js"></script>
 
